<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_tab_host"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_gray"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0" />

        <RadioGroup
            android:id="@+id/main_tab_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom1"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/main_tab_practise"
                style="@style/MMTabButton"
                android:layout_weight="1.0"
                android:checked="true"
                android:drawableTop="@drawable/bg_checkbox_icon_menu_0"
                android:text="@string/bottom_tab_practise" />

            <RadioButton
                android:id="@+id/main_tab_sign"
                style="@style/MMTabButton"
                android:layout_weight="1.0"
                android:drawableTop="@drawable/bg_checkbox_icon_menu_1"
                android:text="@string/bottom_tab_sign" />

            <RadioButton
                android:id="@+id/main_tab_technique"
                style="@style/MMTabButton"
                android:layout_weight="1.0"
                android:drawableTop="@drawable/bg_checkbox_icon_menu_1"
                android:text="@string/bottom_tab_technique" />

            <RadioButton
                android:id="@+id/main_tab_setting"
                style="@style/MMTabButton"
                android:layout_weight="1.0"
                android:drawableTop="@drawable/bg_checkbox_icon_menu_2"
                android:text="@string/bottom_tab_setting" />

            <RadioButton
                android:id="@+id/main_tab_more"
                style="@style/MMTabButton"
                android:layout_weight="1.0"
                android:drawableTop="@drawable/bg_checkbox_icon_menu_3"
                android:text="@string/bottom_tab_more" />
        </RadioGroup>
    </LinearLayout>

</TabHost>